<resources>
    <string name="app_name">Set Solver</string>
    <string name="the_image_you_took">The image you took</string>
    <string name="take_a_photo">Take A Photo</string>
    <string name="min_threshold">Min Threshold:</string>
    <string name="ratio">Ratio:</string>
    <string name="recalculate_edges">Recalculate edges</string>
    <string name="blur_radius">Blur Radius:</string>
    <string name="update_photo">update photo</string>
    <string name="recalculate_with_new_parameters">Recalculate With new parameters</string>
    <string name="capture">Capture</string>
    <string name="start_camera">Start Camera</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="capture_button_alt">Capture</string>
    <string name="camera_error_heading">"Camera Error: "</string>
</resources>